# snowpack-template-ts-rust-wasm

./: .gitignore  README.md  package.json  snowpack.config.mjs  tsconfig.json
public/: index.css  index.html
src/: index.ts
wasm_crate/: Cargo.toml
wasm_crate/src/: lib.rs
wasm_crate/src/page/: dom.rs  elements.rs  mod.rs
wasm_crate/tests/: lib_tests.rs
