[package]
name = "wasm_crate"
version = "0.0.1"
authors = ["jake-pauls <jakepauls99@gmail.com>"]
description = "Snowpack CSA Template for Rust and WebAssembly"
license = "MIT"
readme = "./README.md"
repository = "https://github.com/jake-pauls/snowpack-template-rust-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cargo-watch = "^7.0.0"
wasm-bindgen = "^0.2"