[package]
name = "wasm_crate"
version = "0.0.1"
authors = ["jake-pauls <jakepauls99@gmail.com>"]
description = "Snowpack CSA Template for Rust and WebAssembly"
license = "MIT"
repository = "https://github.com/jake-pauls/snowpack-template-rust-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2.74"
wasm-bindgen-futures = "^0.4.13"
js-sys = "^0.3.40"

# getrandom requires distinction for 'js' targets
rand = "^0.8.4"
getrandom = { version = "^0.2.3", features = ["js"] }

# 'wee_alloc' is a smaller allocator than the wasm default (~1K in code size, requires rust nightly)
wee_alloc = { version = "^0.4.5", optional = true }

[dependencies.web-sys]
version = "^0.3.51"
features = [
  "CssStyleDeclaration",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "^0.3.13"

[profile.release]
# tell the rust compiler to use link time optimizations for a smaller .wasm
lto = true

# tell the rust compiler to optimize for small code size
opt-level = "s"
